# fink_sn_activelearning

./: .gitignore  CHANGES.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
actsnfink/: __init__.py  __initi__.py  classifier_sigmoid.py  early_sn_classifier.py  rainbow.py  sigmoid.py  train_utils.py
actsnfink/notebooks/: 02_light_curves.ipynb  04_metrics.ipynb  05_classes_in_loop.ipynb  07_prob_evolution.ipynb  mean_model.ipynb
actsnfink/profiling/: README.md  profile.py
actsnfink/scripts/: feature_extraction_ztf.py  run_loop.py  run_loop_mlflow.py
code/: README  classifier_sigmoid.py  early_sn_classifier.py  mean_model.ipynb  sigmoid.py
code/.ipynb_checkpoints/: classifier_sigmoid-checkpoint.py  mean_model-checkpoint.ipynb  sigmoid-checkpoint.py
code/plots/: 01_06_populations.ipynb  03_features.ipynb  04_metrics.ipynb  07_prob_evolution.ipynb
code/plots/.ipynb_checkpoints/: 01_06_populations-checkpoint.ipynb  02_light_curves-checkpoint.ipynb  03_features-checkpoint.ipynb  05_classes_in_loop-checkpoint.ipynb
