[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actsnfink"
version = "0.1"
description = "Active Learning for Early Supernova Classification in Fink"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Emille E. O. Ishida" }]
license = "MIT"         
license-files = ["LICENSE*"]
dependencies = [
    "pandas>=1.3.5",
    "numpy>=1.21.6", 
    "actsnclass>=1.3.1",
    "scipy>=1.7.3",
    "scikit-learn>=1.0.2",
    "fink_utils>=0.43.0",
    "mlflow>=3.4.0",
    "docutils>=0.21.2"
]

[project.scripts]
extract-features-ztf   = "actsnfink.scripts.features_extraction_ztf:main"
run-loop               = "actsnfink.scripts.run_loop:main"
run-loop-mlflow        = "actsnfink.scripts.run_loop_mlflow:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["actsnfink*"]
exclude = ["build*"]

[tool.setuptools.package-data]
actsnclass = ["scripts/*.py"]
